--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "migration:generate": "npm install -g db-migrate db-migrate-pg && db-migrate create initialize --sql-file",
+    "migration:up": "db-migrate up initialize",
+    "migration:down": "db-migrate down initialize"
   },
   "dependencies": {
     "@nestjs/common": "^7.6.14",
@@ -32,14 +35,16 @@
     "class-validator": "^0.13.1",
     "config": "^3.3.6",
     "cross-env": "^7.0.3",
+    "db-migrate": "^1.0.0-beta.16",
+    "db-migrate-pg": "^1.2.2",
     "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.14",
+    "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.6.3",
-    "passport": "^0.4.1"
+    "rxjs": "^6.6.3"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
