--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "prebuild": "rimraf dist",
     "build": "nest build",
     "format": "prettier --write ./**/*.{js,jsx,ts,tsx,css,md,json} --config ./.prettierrc --ignore-path ./.gitignore",
-    "start": "cross-env NODE_ENV=production nodemon",
+    "start": "cross-env NODE_ENV=production node dist/main.js",
     "start:dev": "cross-env NODE_ENV=development nodemon",
     "start:debug": "cross-env nest start --debug --watch",
     "start:prod": "cross-env NODE_ENV=production nodemon",
